# ansible-lint-custom-rule-package-sample

./: README.md  setup.cfg
rules/: ExampleRule.py
