# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#metadata
[metadata]
name = example_lint_rules
version = 0.0.1
author = sky-joker
description = Example Lint Rules
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/sky-joker/ansible-lint-custom-rule-package-sample
project_urls =
    Source Code = https://github.com/pypa/sampleproject/issues
    Documentation = https://github.com/pypa/sampleproject/issues
    Bug Tracker = https://github.com/sky-joker/ansible-lint-custom-rule-package-sample/issues
classifiers =
    # https://pypi.org/classifiers/
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License

# https://setuptools.readthedocs.io/en/latest/userguide/declarative_config.html#options
[options]
package_dir = ansiblelint.rules.custom.example_lint_rules = rules
packages = ansiblelint.rules.custom.example_lint_rules
install_requires =
    ansible-lint >= 4.3.1
python_requires = >=3.6
